# WorkDashboard

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  run.ps1  start.bat
.claude/rules/: database.md  frontend.md  github.md  logging.md  performance.md  review.md  testing.md
alembic/: env.py
alembic/versions/: 4413eeb45d01_initial.py
docs/: data_model.md  requirements.md  screens.md
src/work_dashboard/: database.py  main.py  utils.py
src/work_dashboard/models/: __init__.py  base.py  member.py  task.py  wcm.py
src/work_dashboard/routers/: dashboard.py  members.py  tasks.py
src/work_dashboard/static/css/: app.css
src/work_dashboard/templates/: base.html
src/work_dashboard/templates/dashboard/: index.html
src/work_dashboard/templates/members/: detail.html  form.html  list.html  must_form.html
src/work_dashboard/templates/partials/: mission_options.html
src/work_dashboard/templates/tasks/: form.html  list.html
tests/integration/: test_app_smoke.py
tests/unit/: test_period.py
